--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.16",
     "cross-env": "^5.2.0",
     "node-sass": "^4.11.0",
+    "raw-loader": "^2.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-codemirror": "^4.0.6",
-    "vue-js-modal": "^1.3.28"
+    "vue-js-modal": "^1.3.28",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
