--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.6",
     "vue-codemirror": "^4.0.6",
     "vue-js-modal": "^1.3.28",
+    "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
